[build-system]
requires = [ "setuptools>=61", "wheel", "setuptools-git-versioning>=2.0,<3", ]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true # Allows setuptools-git-versioning to pull version from git state

[tool.setuptools]
py-modules = []

[project]
name = "model-interpeter"
readme = "README.md"
license = {'text' = "Proprietary"}
authors = [
    {name = "LV GI Data Science Team", email = "#DataSciencePackages@lv.co.uk"},
]
description  = "this package contains functionality for reporting on how your ML model is making decisions"
requires-python = ">= 3.10"
dynamic = ["version"]

dependencies = [
    "numpy",
    "numba",#<0.57
    "shap",
]

[project.optional-dependencies]
dev = [
    "xgboost",
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "pytest-benchmark",
    "bandit",
    "hypothesis",
    "mypy",
    "ruff",
    "pluggy",
    "pre-commit",
    "pyodbc",
    "scikit-learn",
    "pandas",
]